--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@apex-elements/button",
   "version": "0.0.1",
   "description": "The Apex Legends button",
-  "main": "fonts.js",
+  "main": "button.js",
   "repository": "git@github.com:ruphin/apex-button.git",
   "author": "Goffert van Gool",
   "license": "MIT",
